# rainmeter-plugin-net6-templates

./: .gitignore  README.md
skins/: Plugin.Example.SystemVersion.ini
src/Plugin.Example.Empty/: Plugin.Example.Empty.sln
src/Plugin.Example.Empty/Plugin.Example.Empty/: Measure.cs  Plugin.Example.Empty.csproj
src/Plugin.Example.Empty/Plugin.Example.Empty.TestConsole/: Plugin.Example.Empty.TestConsole.csproj  Program.cs
src/Plugin.Example.Empty/Plugin.Example.Empty/Extensions/: IntPtrExtensions.cs  StringExtensions.cs
src/Plugin.Example.Empty/Plugin.Example.Empty/NativeInterop/: IRainmeterMeasureApiProxy.cs  MeasureApiTestProxy.cs  NativeInteropException.cs  Plugin.cs  RainmeterLogLevel.cs  RainmeterMeasureApiProxy.cs
src/Plugin.Example.Empty/Plugin.Example.Empty/Scripts/: AfterPublish.bat  UpdateCMakePreset.ps1
src/Plugin.Example.SystemVersion/: Directory.Build.props  Plugin.Example.SystemVersion.sln
src/Plugin.Example.SystemVersion/Plugin.Example.SystemVersion/: Measure.cs
src/Plugin.Example.SystemVersion/Plugin.Example.SystemVersion.TestConsole/: Plugin.Example.SystemVersion.TestConsole.csproj  Program.cs
src/Plugin.Example.SystemVersion/Plugin.Example.SystemVersion/Extensions/: IntPtrExtensions.cs  StringExtensions.cs
src/Plugin.Example.SystemVersion/Plugin.Example.SystemVersion/NativeInterop/: IRainmeterMeasureApiProxy.cs  MeasureApiTestProxy.cs  NativeInteropException.cs  Plugin.cs  RainmeterLogLevel.cs  RainmeterMeasureApiProxy.cs
src/Plugin.Example.SystemVersion/Plugin.Example.SystemVersion/Scripts/: AfterPublish.bat
src/Plugin.Shim/: CMakeLists.txt  CMakePresets.json
src/Plugin.Shim/RainmeterPluginShim/: CMakeLists.txt  MeasureShim.cpp  MeasureShim.hpp  NetHost.cpp  NetHost.hpp  Plugin.cpp  Plugin.hpp  Plugin.rc  include.hpp
src/Plugin.Shim/TestConsole/: CMakeLists.txt  Console.cpp
